--- a/source/index.html
+++ b/source/index.html
@@ -7,19 +7,132 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internship programs</title>
   <link rel="stylesheet" href="sass/style.scss">
+  <link rel="icon" href="public/favicon.ico">
+  <link rel="icon" type="image/png" href="img/favicon/favicon.png">
+  <link rel="preload" href="fonts/manrope-300.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/manrope-400.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/manrope-500.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
 
 <body>
-  <div data-test="slider">slider</div>
-  <div data-test="about">about</div>
-  <div data-test="programs">programs</div>
-  <div data-test="grant">grant</div>
-  <div data-test="news">news</div>
-  <div data-test="FAQ">FAQ</div>
-  <div data-test="reviews">reviews</div>
-  <div data-test="contacts">contacts</div>
-  <div data-test="form">form</div>
-  <div data-test="footer">footer</div>
+  <div class="wrapper">
+    <div data-test="slider">
+
+      <header class="header">
+        <div class="container">
+          <div class="header__container">
+            <a class="header__link">
+              <img src="img/svg/logotype.svg" alt="Лого" width="52" height="52">
+            </a>
+
+            <button class="header__btn btn">
+              меню
+              <svg aria-hidden="true" focusable="false" width="20" height="20">
+                <use href="__spritemap#sprite-menu"></use>
+              </svg>
+            </button>
+          </div>
+
+          <nav class="header__nav menu">
+            <ul class="menu__list">
+
+              <!-- элемент 1 -->
+              <li class="menu__item">
+                <a class="menu__link" href="#about">О проекте</a>
+              </li>
+
+              <!-- элемент 2 -->
+              <li class="menu__item">
+                <button class="menu__tab" type="button">
+                  Программы
+                  <svg aria-hidden="true" focusable="false" width="12" height="12">
+                    <use href="__spritemap#sprite-arrow-down"></use>
+                  </svg>
+                </button>
+                <ul class="menu__submenu">
+                  <li class="menu__submenu-item">
+                    <a class="menu__submenu-link" href="#programs">Стажировки</a>
+                  </li>
+
+                  <li class="menu__submenu-item">
+                    <a class="menu__submenu-link" href="#programs">Волонтёрство</a>
+                  </li>
+
+                  <li class="menu__submenu-item">
+                    <a class="menu__submenu-link" href="#programs">Учёба</a>
+                  </li>
+
+                  <li class="menu__submenu-item">
+                    <a class="menu__submenu-link" href="#programs">Религия</a>
+                  </li>
+                </ul>
+              </li>
+
+              <!-- элемент 3 -->
+              <li class="menu__item">
+                <a class="menu__link" href="#grant">как поехать</a>
+              </li>
+
+              <!-- элемент 4 -->
+              <li class="menu__item">
+                <a class="menu__link" href="#reviews">отзывы</a>
+              </li>
+
+              <!-- элемент 5 -->
+              <li class="menu__item">
+                <button class="menu__tab" type="button">
+                  новости
+                  <svg aria-hidden="true" focusable="false" width="12" height="12">
+                    <use href="__spritemap#sprite-arrow-down"></use>
+                  </svg>
+                </button>
+                <ul class="menu__submenu">
+                  <li class="menu__submenu-item">
+                    <a class="menu__submenu-link" href="#news">Общее</a>
+                  </li>
+
+                  <li class="menu__submenu-item">
+                    <a class="menu__submenu-link" href="#news">Волонтёрство</a>
+                  </li>
+
+                  <li class="menu__submenu-item">
+                    <a class="menu__submenu-link" href="#news">Стажировки</a>
+                  </li>
+
+                  <li class="menu__submenu-item">
+                    <a class="menu__submenu-link" href="#news">Карьера</a>
+                  </li>
+
+                  <li class="menu__submenu-item">
+                    <a class="menu__submenu-link" href="#news">Путешествия</a>
+                  </li>
+                </ul>
+              </li>
+
+              <!-- элемент 6 -->
+              <li class="menu__item">
+                <a class="menu__link" href="#contacts">контакты</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+
+      <section class="hero">
+        
+      </section>
+    </div>
+
+    <div data-test="about" id="about"></div>
+    <div data-test="programs" id="programs"></div>
+    <div data-test="grant" id="grant"></div>
+    <div data-test="news" id="news"></div>
+    <div data-test="FAQ"></div>
+    <div data-test="reviews" id="reviews"></div>
+    <div data-test="contacts" id="contacts"></div>
+    <div data-test="form"></div>
+    <div data-test="footer"></div>
+  </div>
   <script type="module" src="js/main.js"></script>
 </body>
 
