создает структуру свайпера

--- a/source/index.html
+++ b/source/index.html
@@ -119,7 +119,13 @@
       </header>
 
       <section class="hero">
-        
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              
+            </div>
+          </div>
+        </div>
       </section>
     </div>
 
