--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internship programs</title>
   <link rel="stylesheet" href="sass/style.scss">
-  <link rel="icon" href="public/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="img/favicon/favicon.png">
   <link rel="preload" href="fonts/manrope-300.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/manrope-400.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -122,7 +122,7 @@
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              
+
             </div>
           </div>
         </div>
