Создает блок ABOUT

--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internship programs</title>
+  <title>Internship</title>
   <link rel="stylesheet" href="sass/style.scss">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="img/favicon/favicon.png">
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper main-wrapper">
     <div data-test="slider">
 
       <header class="header" data-header="container">
@@ -43,7 +43,7 @@
 
               <!-- элемент 2 -->
               <li class="menu__item" data-accordion="element">
-                <button class="menu__tab" type="button" data-accordion="button">
+                <button class="menu__tab" type="button" data-accordion="button" data-menu="tab">
                   Программы
                   <svg aria-hidden="true" focusable="false" width="12" height="12">
                     <use href="__spritemap#sprite-arrow-down"></use>
@@ -80,7 +80,7 @@
 
               <!-- элемент 5 -->
               <li class="menu__item" data-accordion="element">
-                <button class="menu__tab" type="button" data-accordion="button">
+                <button class="menu__tab" type="button" data-accordion="button" data-menu="tab">
                   новости
                   <svg aria-hidden="true" focusable="false" width="12" height="12">
                     <use href="__spritemap#sprite-arrow-down"></use>
@@ -121,15 +121,17 @@
       <section class="hero">
         <h1 class="visually-hidden">Проект "Стажировка"</h1>
 
-        <div class="swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-pagination">
+        <div class="swiper hero__swiper" data-hero="swiper">
 
-            </div>
+          <div class="container">
+            <div class="hero__pagination" data-hero="pagination"></div>
+          </div>
+
+          <div class="hero__wrapper swiper-wrapper">
 
             <!-- Слайд 1 -->
             <div class="swiper-slide">
-              <div class="swiper__image">
+              <div class="hero__image">
                 <picture>
                   <source type="image/webp" srcset="img/hero/photo-1.webp 1x, img/hero/photo-1@2x.webp 2x">
                   <img src="img/hero/photo-1.jpg" srcset="img/hero/photo-1@2x.jpg 2x" width="1440" height="800" alt="Фотография студентки">
@@ -137,30 +139,35 @@
               </div>
 
               <div class="container">
-                <div class="swiper__content">
+                <div class="hero__title">
                   <h2>
                     Глобальный профессиональный опыт обучения за рубежом
                   </h2>
-
-                  <p>
-                    Погрузитесь в академическую программу, проходя практику в разных городах, ощущая настоящий студенческий стиль жизни!
-                  </p>
                 </div>
+                <div class="hero__bottom">
+                  <div class="hero__text">
+                    <p>
+                      Погрузитесь в академическую программу, проходя практику в разных городах, ощущая настоящий студенческий стиль жизни!
+                    </p>
+                  </div>
 
-                <a class="btn" href="#">
-                  подробнее
-                  <span>
-                    <svg aria-hidden="true" focusable="false" width="8" height="8">
-                      <use href="__spritemap#sprite-link"></use>
-                    </svg>
-                  </span>
-                </a>
+                  <div class="hero__btn-wrapper">
+                    <a class="hero__btn btn btn--main" href="#">
+                      подробнее
+                      <span>
+                        <svg aria-hidden="true" focusable="false" width="10" height="10">
+                          <use href="__spritemap#sprite-link"></use>
+                        </svg>
+                      </span>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
 
             <!-- Слайд 2 -->
             <div class="swiper-slide">
-              <div class="swiper__image">
+              <div class="hero__image">
                 <picture>
                   <source type="image/webp" srcset="img/hero/photo-2.webp 1x, img/hero/photo-2@2x.webp 2x">
                   <img src="img/hero/photo-2.jpg" srcset="img/hero/photo-2@2x.jpg 2x" width="1440" height="800" alt="Группа волонтеров">
@@ -168,30 +175,35 @@
               </div>
 
               <div class="container">
-                <div class="swiper__content">
+                <div class="hero__title">
                   <h2>
                     Волонтёрские программы - внесите свой вклад в общество
                   </h2>
-
-                  <p>
-                    Возможности для преподавания, органического сельского хозяйства, устойчивого образа жизни и другое.
-                  </p>
                 </div>
+                <div class="hero__bottom">
+                  <div class="hero__text">
+                    <p>
+                      Возможности для преподавания, органического сельского хозяйства, устойчивого образа жизни и другое.
+                    </p>
+                  </div>
 
-                <a class="btn" href="#">
-                  подробнее
-                  <span>
-                    <svg aria-hidden="true" focusable="false" width="8" height="8">
-                      <use href="__spritemap#sprite-link"></use>
-                    </svg>
-                  </span>
-                </a>
+                  <div class="hero__btn-wrapper">
+                    <a class="hero__btn btn btn--main" href="#">
+                      подробнее
+                      <span>
+                        <svg aria-hidden="true" focusable="false" width="10" height="10">
+                          <use href="__spritemap#sprite-link"></use>
+                        </svg>
+                      </span>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
 
             <!-- Слайд 3 -->
             <div class="swiper-slide">
-              <div class="swiper__image">
+              <div class="hero__image">
                 <picture>
                   <source type="image/webp" srcset="img/hero/photo-3.webp 1x, img/hero/photo-3@2x.webp 2x">
                   <img src="img/hero/photo-3.jpg" srcset="img/hero/photo-3@2x.jpg 2x" width="1440" height="800" alt="Фотография студентов">
@@ -199,24 +211,29 @@
               </div>
 
               <div class="container">
-                <div class="swiper__content">
+                <div class="hero__title">
                   <h2>
                     Программы стажировок в крупнейших компаниях мира
                   </h2>
-
-                  <p>
-                    Получите незаменимый опыт работы в ведущих мировых компаниях и государственных организациях.
-                  </p>
                 </div>
+                <div class="hero__bottom">
+                  <div class="hero__text">
+                    <p>
+                      Получите незаменимый опыт работы в ведущих мировых компаниях и государственных организациях.
+                    </p>
+                  </div>
 
-                <a class="btn" href="#">
-                  подробнее
-                  <span>
-                    <svg aria-hidden="true" focusable="false" width="8" height="8">
-                      <use href="__spritemap#sprite-link"></use>
-                    </svg>
-                  </span>
-                </a>
+                  <div class="hero__btn-wrapper">
+                    <a class="hero__btn btn btn--main" href="#">
+                      подробнее
+                      <span>
+                        <svg aria-hidden="true" focusable="false" width="10" height="10">
+                          <use href="__spritemap#sprite-link"></use>
+                        </svg>
+                      </span>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -227,23 +244,137 @@
 
     <main>
 
-      <div data-test="about" id="about"></div>
-      <div data-test="programs" id="programs"></div>
-      <div data-test="grant" id="grant"></div>
-      <div data-test="news" id="news"></div>
-      <div data-test="FAQ"></div>
-      <div data-test="reviews" id="reviews"></div>
-      <div data-test="contacts" id="contacts"></div>
-      <div data-test="form"></div>
+      <div class="main-wrapper">
+
+        <div data-test="about" id="about">
+          <div class="container">
+            <section class="about">
+              <div class="about__container">
+                <h2 class="about__title">О проекте «Стажировка»</h2>
+                <div class="about__description">
+                  <p>
+                    «Стажировка» — совместный проект правительств и волонтёрских бригад.
+                  </p>
+                </div>
+              </div>
+
+              <div class="about__container">
+                <div class="about__content">
+                  <h3>Наша цель</h3>
+                  <p>
+                    Наша деятельность направлена<br> на повышение квалификации молодых специалистов на ранних
+                    и средних стадиях карьеры, предоставляя<br> им инструменты для решения сложных проблем,
+                    с которыми сталкиваются в мире. Цель центра — наделить этих людей способностью инициировать
+                    значимые изменения.
+                  </p>
+                </div>
+                <button class="about__btn btn btn--main">
+                  подробнее о проекте
+                  <span>
+                    <svg aria-hidden="true" focusable="false" width="10" height="10">
+                      <use href="__spritemap#sprite-link"></use>
+                    </svg>
+                  </span>
+                </button>
+              </div>
+            </section>
+
+            <section class="advantages">
+              <h2 class="visually-hidden">Преимущества проекта «Стажировка»</h2>
+              <ul class="advantages__list">
+
+                <!-- Преимущество 1 -->
+                <li class="advantages__item">
+                  <span>
+                    <svg aria-hidden="true" focusable="false" width="22" height="22">
+                      <use href="__spritemap#sprite-star"></use>
+                    </svg>
+                  </span>
+
+                  <div class="advantages__content advantages__content--program">
+                    <h3>Более 250 программ</h3>
+                    <p>
+                      учебных и рабочих, разной длительностью от 3 месяцев до 1 года
+                    </p>
+                  </div>
+                </li>
+
+                <!-- Преимущество 2 -->
+                <li class="advantages__item">
+                  <span>
+                    <svg aria-hidden="true" focusable="false" width="22" height="22">
+                      <use href="__spritemap#sprite-star"></use>
+                    </svg>
+                  </span>
+
+                  <div class="advantages__content advantages__content--participant">
+                    <h3>Более<br> 3000 участников</h3>
+                    <p>
+                      уже успешно прошли программу<br> от «Стажировка»<br> и остались в разных странах
+                    </p>
+                  </div>
+                </li>
+
+                <!-- Преимущество 3 -->
+                <li class="advantages__item">
+                  <span>
+                    <svg aria-hidden="true" focusable="false" width="22" height="22">
+                      <use href="__spritemap#sprite-star"></use>
+                    </svg>
+                  </span>
+
+                  <div class="advantages__content advantages__content--money">
+                    <h3>от 4 200 $ до 8 400 $</h3>
+                    <p>
+                      грант всем участникам<br> для комфортного прохождения программы
+                    </p>
+                  </div>
+                </li>
+
+                <!-- Преимущество 4 -->
+                <li class="advantages__item">
+                  <span>
+                    <svg aria-hidden="true" focusable="false" width="22" height="22">
+                      <use href="__spritemap#sprite-star"></use>
+                    </svg>
+                  </span>
+
+                  <div class="advantages__content advantages__content--country">
+                    <h3>участники из 60 стран</h3>
+                    <p>
+                      студенты со всего<br> мира приезжают<br> на программу «Стажировка»
+                    </p>
+                  </div>
+                </li>
+              </ul>
+            </section>
+          </div>
+        </div>
+
+        <div data-test="programs" id="programs"></div>
+
+        <div data-test="grant" id="grant"></div>
+
+        <div data-test="news" id="news"></div>
+
+        <div data-test="FAQ"></div>
+
+        <div data-test="reviews" id="reviews"></div>
+
+        <div data-test="contacts" id="contacts"></div>
+
+        <div data-test="form"></div>
+
+      </div>
 
     </main>
 
+    <footer class="footer">
 
-    <div data-test="footer">
-      <footer class="footer">
+      <div data-test="footer"></div>
 
-      </footer>
-    </div>
+    </footer>
+
   </div>
 
   <script src="js/vendor.js" type="module"></script>
