--- a/source/index.html
+++ b/source/index.html
@@ -405,7 +405,7 @@
 
               <p class="form__group">
                 <label for="city">Телефон</label>
-                <select name="city" id="city" value="">
+                <select name="city" id="city" value="" required>
                   <option value=""></option>
                   <option value="Moskow">Москва</option>
                   <option value="St. Petersburg">Санкт-Петерберг</option>
